--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travelflow-planner</title>
+    <meta name="description" content="Plan your dream journey with TravelFlow — flights, destinations, currencies, and more." />
+    <title>TravelFlow — Plan Your Journey</title>
   </head>
   <body>
     <div id="root"></div>
